Comment out attempts to fix content-shifting scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,8 +15,8 @@ html {
     -webkit-tap-highlight-color: transparent;
     // Disable the long press pop up on ios
     -webkit-touch-callout: none;
-    scrollbar-gutter: stable both-edges;
-    overflow-y: scroll;
+    // scrollbar-gutter: stable;
+    // overflow-y: scroll;
 
 //     @include m.mobile {
 //         font-size: 14px;
